examples/test/testpolicy19146.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19146
  namespace: namespace486
spec:
  podSelector:
    matchLabels:
      key31: value46
      key18: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value33
      podSelector:
        matchLabels:
          key20: value46
          key6: value15
